# helloworld-cmake-vscode

./: CMakeLists.txt  CMakePresets.json  helloworld.cpp
